hphp/test/zend/bad/ext/standard/tests/file/fstat.php
<?php

$filename = dirname(__FILE__)."/fstat.dat";

$fp = fopen($filename, "w");
var_dump(fstat($fp));
fclose($fp);
var_dump(fstat($fp));

@unlink($filename);
echo "Done\n";
?>